--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,4 @@ jobs:
           command: php artisan migrate
       - run:
           name: Run tests
-          command ./vendor/bin/phpunit
+          command: ./vendor/bin/phpunit
