--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install
+      run: composer install --no-progress
     - name: Generate key
       run: php artisan key:generate
     - name: Create Database
